--- a/src/app/pages/static/footer/footer.component.html
+++ b/src/app/pages/static/footer/footer.component.html
@@ -1,5 +1,5 @@
- <p-panel [toggleable]="false">
-    <ng-template pTemplate="footer">
-        Escuela Politecnica Nacional 2023
-    </ng-template>
+<p-panel>
+
+    Escuela Politecnica Nacional 2023
+
 </p-panel>
