--- a/src/app/pages/static/header/header.component.html
+++ b/src/app/pages/static/header/header.component.html
@@ -1,9 +1,12 @@
-<h1 style="color: green">SILABO EPN</h1>
+<div style="background-color:rgb(238, 229, 229)">
+<h1 style="text-align: center;">SILABO EPN</h1>
+
   <!--https://www.geeksforgeeks.org/angular-primeng-panel-header-and-footer-content/ -->
-<p-panel [toggleable]="false">
-    <ng-template pTemplate="header">
-        <h1>
-            Registro Docentes
+<p-panel >
+    <ng-template pTemplate="header" >
+        <h1 style="color: rgb(0, 0, 0);">
+            Registro de aulas por docente
         </h1>
     </ng-template>
 </p-panel>
+</div>
